--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
-    "three": "^0.154.0"
+    "split-type": "^0.3.3",
+    "three": "^0.155.0",
+    "three.interaction": "^0.2.3"
   }
 }
