--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "gsap": "^3.12.2",
     "split-type": "^0.3.3",
-    "three": "^0.155.0",
-    "three.interaction": "^0.2.3"
+    "three": "^0.155.0"
   }
 }
