--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
+    "postprocessing": "^6.33.1",
     "split-type": "^0.3.3",
-    "three": "^0.155.0"
+    "three": "^0.155.0",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
